[FIX] sap.m.PlanningCalendar: wrap title of the row
BCP: 1880169605
CR-Id: 002075125900001352172018

--- a/src/sap.m/src/sap/m/themes/base/PlanningCalendar.less
+++ b/src/sap.m/src/sap/m/themes/base/PlanningCalendar.less
@@ -208,6 +208,11 @@ html[data-sap-ui-browser^="ie"].sap-desktop .sapMPlanCal .sapUiCalRow:not(.sapUi
 			position: absolute;
 			padding-left: calc(3rem + 0.75rem); // Width of the image + right margin
 			width: 100%;
+
+			.sapMSLITitleOnly,
+			.sapMSLITitle {
+				white-space: normal;
+			}
 		}
 	}
 }
